Running the program only through a jar file